fix: footer overlapping

--- a/src/styles.css
+++ b/src/styles.css
@@ -53,6 +53,7 @@ h2 {
 
 .container-emoji {
   margin: 2rem;
+  margin-bottom: 5rem;
 }
 span {
   font-size: 2rem;
